add graph meta tags

--- a/src/components/languages/index.module.scss
+++ b/src/components/languages/index.module.scss
@@ -18,6 +18,7 @@
     display: flex;
     transition: all 0.3s;
     text-transform: capitalize;
+    cursor: pointer;
 
     &.isActive {
         background: #a8caff;
