--- a/src/components/feed/index.module.scss
+++ b/src/components/feed/index.module.scss
@@ -71,7 +71,9 @@
     font-size: 14px;
     padding: 4px;
     color: #161617;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(20px);
+    text-transform: capitalize;
     position: absolute;
     right: 8px;
     top: 8px;
